--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,97 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!-- We're using the Drawer layout so that we can implement ht navigation drawer -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.evans.MainActivity">
+    android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/LVAppointments"
-        android:layout_width="368dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/LVGoals"
-        android:layout_width="368dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="144dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btnAppointment"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/SeeMore"
-        app:layout_constraintBottom_toTopOf="@+id/LVGoals"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LVAppointments"
-        app:layout_constraintVertical_bias="0.106" />
 
-    <Button
-        android:id="@+id/btnGoals"
-        android:layout_width="wrap_content"
-        android:layout_height="39dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/SeeMore"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LVGoals"
-        app:layout_constraintVertical_bias="0.067" />
 
-    <EditText
-        android:id="@+id/etA"
-        android:layout_width="57dp"
-        android:layout_height="31dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="numberSigned"
-        app:layout_constraintBottom_toTopOf="@+id/LVGoals"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.795"
-        app:layout_constraintStart_toEndOf="@+id/btnAppointment"
-        app:layout_constraintTop_toBottomOf="@+id/LVAppointments"
-        app:layout_constraintVertical_bias="0.0" />
+    <!-- The main view content goes here. This is practically a fragment placeholder -->
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/etG"
-        android:layout_width="54dp"
-        android:layout_height="36dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="numberSigned"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.783"
-        app:layout_constraintStart_toEndOf="@+id/btnGoals"
-        app:layout_constraintTop_toBottomOf="@+id/LVGoals"
-        app:layout_constraintVertical_bias="0.065" />
+    </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+
+    <!-- Navigationbar. I'm trying to follow Google's recommendation on a lot of these properties
+         ** itemIconTInt: Applies Color to the icons of the Navigation menu
+                 Value (Gray - 54% #000000)
+         ** itemTextcolor: Applies Color to the Text in the Navigation Menu
+                    Value (Blackish - 87% #000000) -->
+    <!-- Read the full Google guidelines/specification here
+        https://material.io/guidelines/patterns/navigation-drawer.html -->
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/main_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_bar_header"
+        app:itemIconTint="#8c000000"
+        app:itemTextColor="#E6000000"
+        app:menu="@menu/navbar_menu"/>
+
+
+</android.support.v4.widget.DrawerLayout>
