--- a/app/src/main/res/layout/fragment_customer_edit.xml
+++ b/app/src/main/res/layout/fragment_customer_edit.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.CustomerEditFragment">
+    tools:context="com.example.evans.ui.CustomerEditFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -118,7 +118,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_other_notes" />
 
         <Button
-            android:id="@+id/btnSetAppt"
+            android:id="@+id/btn_set_appt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -131,7 +131,7 @@
             app:layout_constraintVertical_bias="0.215" />
 
         <Button
-            android:id="@+id/btnSaveEdit"
+            android:id="@+id/btn_save_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -144,7 +144,7 @@
             app:layout_constraintHorizontal_bias="0.723"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnSetAppt"
+            app:layout_constraintStart_toEndOf="@+id/btn_set_appt"
             app:layout_constraintTop_toBottomOf="@+id/etxt_other_notes"
             app:layout_constraintVertical_bias="0.216" />
     </android.support.constraint.ConstraintLayout>
