--- a/app/src/main/res/layout/fragment_edit_appointment.xml
+++ b/app/src/main/res/layout/fragment_edit_appointment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.EditAppointmentFragment">
+    tools:context="com.example.evans.ui.EditAppointmentFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
