Alligned the views in fragment_goal

--- a/app/src/main/res/layout/fragment_goal_.xml
+++ b/app/src/main/res/layout/fragment_goal_.xml
@@ -13,7 +13,7 @@
             android:id="@+id/txtvEndDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="36dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/end_date"
             android:textSize="18sp"
@@ -25,7 +25,7 @@
             android:id="@+id/txtGoalName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/goal_name"
             android:textSize="18sp"
@@ -38,11 +38,10 @@
             android:labelFor="@+id/txtGoalName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="18dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtGoalName"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,12 +50,10 @@
             android:labelFor="@+id/etxtStartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/txteditGoalName" />
 
@@ -64,7 +61,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="36dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/start_date"
             android:textSize="18sp"
@@ -76,16 +73,10 @@
             android:id="@+id/etxtEndDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="32dp"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintBottom_toTopOf="@+id/etxtDGoal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.822"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtvEndDate"
             app:layout_constraintTop_toBottomOf="@+id/etxtStartDate"
             app:layout_constraintVertical_bias="0.28" />
@@ -94,16 +85,11 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:text="@string/detail_goal"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.032"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtvEndDate" />
 
@@ -111,11 +97,9 @@
             android:id="@+id/etxtDGoal"
             android:layout_width="308dp"
             android:layout_height="73dp"
+            android:layout_marginStart="16dp"
             android:ems="10"
             android:inputType="textMultiLine"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
