--- a/app/src/main/res/layout/fragment_customers_list.xml
+++ b/app/src/main/res/layout/fragment_customers_list.xml
@@ -3,22 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.evans.ui.CustomersViewFragment">
+    tools:context="com.example.evans.ui.CustomersListFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <TextView
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:textSize="30sp"
-            android:text="Customers view Fragment"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            android:backgroundTint="@color/colorAccent"/>
+
+        <ListView
+            android:id="@+id/customer_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+
 
 
     </android.support.constraint.ConstraintLayout>
