Some Java code done

--- a/app/src/main/res/layout/fragment_goal_.xml
+++ b/app/src/main/res/layout/fragment_goal_.xml
@@ -9,20 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txtvEndDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="36dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/end_date"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
-            android:id="@+id/txtGoalName"
+            android:id="@+id/txt_GoalName"
+            android:labelFor="@+id/txt_GoalName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
@@ -33,9 +23,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <EditText
-            android:id="@+id/txteditGoalName"
-            android:labelFor="@+id/txtGoalName"
+            android:id="@+id/etxt_GoalName"
+            android:labelFor="@+id/etxt_GoalName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -43,95 +34,145 @@
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtGoalName"
+            app:layout_constraintStart_toEndOf="@+id/txt_GoalName"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/etxtStartDate"
-            android:labelFor="@+id/etxtStartDate"
+            android:id="@+id/etxt_StartDate"
+            android:labelFor="@+id/etxt_StartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="12dp"
             android:ems="10"
+            android:hint="@string/dateEnterHint"
             android:inputType="date"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/txteditGoalName" />
+            app:layout_constraintStart_toEndOf="@+id/txt_Sdate"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_GoalName" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txt_Sdate"
+            android:labelFor="@+id/txt_Sdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="36dp"
+            android:layout_marginStart="36dp"
             android:layout_marginTop="32dp"
             android:text="@string/start_date"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtGoalName" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_GoalName" />
 
-        <EditText
-            android:id="@+id/etxtEndDate"
+        <TextView
+            android:id="@+id/txt_EndDate"
+            android:labelFor="@+id/txt_EndDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="36dp"
+            android:layout_marginStart="36dp"
+            android:text="@string/end_date"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtv_repeat"
+            app:layout_constraintEnd_toEndOf="@id/txt_Sdate"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/etxt_EndDate"
+            android:labelFor="@+id/etxt_EndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
+            android:hint="@string/dateEnterHint"
             android:inputType="date"
-            app:layout_constraintBottom_toTopOf="@+id/etxtDGoal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.822"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtvEndDate"
-            app:layout_constraintTop_toBottomOf="@+id/etxtStartDate"
-            app:layout_constraintVertical_bias="0.28" />
+            app:layout_constraintStart_toEndOf="@+id/txt_EndDate"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_StartDate" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/detail_goal"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.032"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtvEndDate" />
-
-        <EditText
-            android:id="@+id/etxtDGoal"
-            android:layout_width="308dp"
-            android:layout_height="73dp"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <Button
-            android:id="@+id/btnSaveGoal"
+            android:id="@+id/txt_DofGoals"
+            android:labelFor="@+id/txt_DofGoals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/save_goal"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/detail_goal"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/etxt_DGoal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.116"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/etxt_DGoal"
+            android:labelFor="@+id/etxt_DGoal"
+            android:layout_width="308dp"
+            android:layout_height="73dp"
+            android:layout_marginBottom="136dp"
+            android:ems="10"
+            android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+        <EditText
+            android:id="@+id/etxt_repeatTime"
+            android:labelFor="@+id/etxt_repeatTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="12dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_EndDate" />
+
+        <TextView
+            android:id="@+id/txtv_repeat"
+            android:labelFor="@+id/txtv_repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="44dp"
+            android:layout_marginLeft="16dp"
+            android:text="@string/repeat_times"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txt_DofGoals"
+            app:layout_constraintEnd_toStartOf="@+id/etxt_repeatTime"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/btn_saveGoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="goalActivitySave"
+            android:text="@string/save_goal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.871"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxtDGoal"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintTop_toBottomOf="@+id/etxt_DGoal"
+            app:layout_constraintVertical_bias="0.301" />
+
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
