--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
 
 
 
-
-    <!-- The main view content goes here. This is practically a fragment placeholder -->
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </FrameLayout>
+        <include layout="@layout/tool_bar"/>
 
+        <!-- The main view content goes here. This is practically a fragment placeholder -->
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 
 
 
     <!-- Navigationbar. I'm trying to follow Google's recommendation on a lot of these properties
-         ** itemIconTInt: Applies Color to the icons of the Navigation menu
+         ** itemIconTInt: Applies Color toz the icons of the Navigation menu
                  Value (Gray - 54% #000000)
          ** itemTextcolor: Applies Color to the Text in the Navigation Menu
                     Value (Blackish - 87% #000000) -->
