--- a/app/src/main/res/layout/fragment_service_edit.xml
+++ b/app/src/main/res/layout/fragment_service_edit.xml
@@ -10,43 +10,43 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/txt_service_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:labelFor="@id/etxt_title"
-            android:text="@string/title"
-            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_title"
+            android:labelFor="@id/etxt_service_title"
+            android:text="@string/service_title"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_service_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/txt_description"
+            android:id="@+id/txt_service_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:labelFor="@id/etxt_description"
-            android:text="@string/description"
-            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_description"
+            android:labelFor="@id/etxt_service_description"
+            android:text="@string/service_description"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_service_description"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/txt_price"
+            android:id="@+id/txt_service_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:labelFor="@id/etxt_price"
-            android:text="@string/price"
-            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_price"
+            android:labelFor="@id/etxt_service_price"
+            android:text="@string/service_price"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_service_price"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/etxt_title"
+            android:id="@+id/etxt_service_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -57,7 +57,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/etxt_description"
+            android:id="@+id/etxt_service_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -65,10 +65,10 @@
             android:ems="10"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_title" />
+            app:layout_constraintTop_toBottomOf="@+id/etxt_service_title" />
 
         <EditText
-            android:id="@+id/etxt_price"
+            android:id="@+id/etxt_service_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -77,10 +77,10 @@
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_description" />
+            app:layout_constraintTop_toBottomOf="@+id/etxt_service_description" />
 
         <Button
-            android:id="@+id/btnSaveEdit"
+            android:id="@+id/btn_service_edit_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -88,7 +88,7 @@
             android:text="@string/save_edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_price" />
+            app:layout_constraintTop_toBottomOf="@+id/etxt_service_price" />
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
