--- a/app/src/main/res/layout/fragment_service_view.xml
+++ b/app/src/main/res/layout/fragment_service_view.xml
@@ -1,13 +1,60 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.evans.ui.ServiceViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <!--<TextView
+            android:id="@+id/txt_title"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/etxt_title"
+            android:text="@string/service_title"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <TextView
+            android:id="@+id/txt_description"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_description"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/etxt_description"
+            android:text="@string/service_description"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="73dp" />
+
+        <TextView
+            android:id="@+id/txt_price"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_price"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/etxt_price"
+            android:text="@string/service_price"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="131dp" />
+
+        <Button
+            android:id="@+id/btnSaveEdit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save_edit"
+            tools:layout_editor_absoluteX="232dp"
+            tools:layout_editor_absoluteY="179dp" /> -->
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
