--- a/app/src/main/res/layout/fragment_appointments_list.xml
+++ b/app/src/main/res/layout/fragment_appointments_list.xml
@@ -9,16 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <TextView
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_add_btn_appointment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:textSize="30sp"
-            android:text="Appoinment view Fragment"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            android:backgroundTint="@color/colorAccent"/>
+
+        <ListView
+            android:id="@+id/appointment_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+
 
 
     </android.support.constraint.ConstraintLayout>
