--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.ui.AppointmentEditFragment">
+    tools:context="com.example.evans.ui.EditAppointmentFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,8 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/appointment_name"
-            android:labelFor="@id/etxt_customer_name"
+            android:text="@string/name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,8 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/customer_email"
-            android:labelFor="@id/etxt_customer_email"
+            android:text="@string/email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_customer_name" />
 
@@ -71,8 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/customer_phone"
-            android:labelFor="@id/etxt_customer_phone"
+            android:text="@string/phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_customer_email" />
 
@@ -98,8 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/appointment_date"
-            android:labelFor="@id/etxt_appointment_date"
+            android:text="@string/date"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone" />
 
@@ -126,45 +122,41 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/appointment_service"
-            android:labelFor="@id/etxt_service_type"
+            android:text="@string/service"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_appointment_date" />
 
 
-        <EditText
-            android:id="@+id/etxt_service_type"
+        <Spinner
+            android:id="@+id/spinner_service_type"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:inputType="datetime"
+            android:layout_marginTop="32dp"
             app:layout_constraintStart_toEndOf="@+id/txt_service_type"
             app:layout_constraintTop_toBottomOf="@id/etxt_appointment_date" />
 
         <!-- Price  -->
         <TextView
-            android:id="@+id/txt_appointment_price"
+            android:id="@+id/txt_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/appointment_price"
-            android:labelFor="@id/etxt_appointment_price"
-            app:layout_constraintStart_toEndOf="@id/etxt_service_type"
+            android:text="@string/Price"
+            app:layout_constraintStart_toEndOf="@id/spinner_service_type"
             app:layout_constraintTop_toBottomOf="@id/txt_appointment_date" />
 
 
         <EditText
-            android:id="@+id/etxt_appointment_price"
+            android:id="@+id/etxt_price"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="datetime"
-            app:layout_constraintStart_toEndOf="@+id/txt_appointment_price"
+            app:layout_constraintStart_toEndOf="@+id/txt_price"
             app:layout_constraintTop_toBottomOf="@id/etxt_appointment_date" />
 
 
@@ -175,8 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/appointment_notes"
-            android:labelFor="@id/etxt_appointment_note"
+            android:text="@string/notes"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_service_type" />
 
@@ -189,7 +180,7 @@
             android:ems="10"
             android:inputType="textMultiLine"
             app:layout_constraintStart_toEndOf="@+id/txt_appointment_note"
-            app:layout_constraintTop_toBottomOf="@id/etxt_appointment_price" />
+            app:layout_constraintTop_toBottomOf="@id/etxt_price" />
 
 
         <Button
@@ -197,25 +188,35 @@
             android:layout_width="120dp"
             android:layout_height="45dp"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/red_button"
             android:text="@string/cancel"
             android:textColor="#fff"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_note" />
+            app:layout_constraintTop_toBottomOf="@+id/chk_showed_up" />
 
         <Button
             android:id="@+id/btn_save"
             android:layout_width="120dp"
             android:layout_height="45dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/blue_button"
-            android:text="@string/button_save"
+            android:text="@string/save"
             android:textColor="#fff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btn_cancel"
+            app:layout_constraintTop_toBottomOf="@+id/chk_showed_up" />
+
+        <CheckBox
+            android:id="@+id/chk_showed_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:text="@string/showed_up"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_appointment_note" />
 
 
